--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -26,12 +26,13 @@
 $font-main: 'Noto Sans', 'Roboto', 'Arial', sans-serif;
 
 // area colors
-$color-main: black;
-$color-aspect: #fddd38;
-$color-aspect-sub: #fdc038;
+$color-dark: #150d00;
+$color-dark-sub: #793d02;
+$color-light: #fddd38;
+$color-light-sub: #ffb426;
 
 // text colors
-$color-text: #1d1d1d;
+$color-text: #272727;
 $color-link-1: #ffb300;
 $color-link-2: #ff7800;
 $color-link-shadow: rgba(255, 118, 0, 0.15);
