--- a/css/src/header.scss
+++ b/css/src/header.scss
@@ -2,7 +2,7 @@
     @include main-section-shadow;
     width: 100%; margin: 0 auto; padding-bottom: .5rem;
     text-align: center;
-    @include linear-gradient(45deg, $color-aspect 0%, $color-aspect-sub 100%);
+    @include linear-gradient(45deg, $color-light 0%, $color-light-sub 100%);
     
     
     
@@ -19,24 +19,27 @@
             .link {
                 display: inline-block;
                 margin-right: .3em; padding: .5rem;
-                font-size: 5rem; line-height: 1em; color: $color-main; text-decoration: none; font-weight: bold;
+                color: $color-dark; font-size: 5rem; line-height: 1em; text-decoration: none; font-weight: bold;
                 @include user-select(none);
 
                 span {
                     display: inline-block;
                     margin-left: .1em; padding: .1em .15em;
-                    background-color: $color-main; border: .5rem solid $color-main;
-                    color: $color-aspect;
+                    background-color: $color-dark; border: .5rem solid transparent;
+                    color: $color-light;
                     @include border-radius(.3rem);
                 }
 
-                &:hover,
-                &:focus {
-                    text-decoration: none;
+                @include ON_DESKTOP {
+                    
+                    &:hover,
+                    &:focus {
+                        text-decoration: none;
 
-                    span {
-                        background-color: transparent;
-                        color: $color-main;
+                        span {
+                            background-color: transparent; border-color: $color-dark;
+                            color: $color-dark;
+                        }
                     }
                 }
             }
@@ -44,7 +47,7 @@
             .text {
                 display: inline-block;
                 padding: .5rem;
-                font-size: 1.8rem; line-height: 1em; color: $color-main;
+                font-size: 1.8rem; line-height: 1em; color: $color-dark;
             }
         }
 
@@ -89,8 +92,7 @@
 
             #open-search-btn {
                 margin-left: 5rem; padding: 1rem;
-                border: .3rem solid transparent;
-                font-size: 0; line-height: 1em;
+                color: $color-dark; font-size: 0; line-height: 1em;
                 @include border-radius(.3rem);
                 
                 @include ON_MOBILE {
@@ -100,7 +102,7 @@
                 @include ON_DESKTOP {
                     &:hover,
                     &:focus {
-                        border-color: $color-main;
+                        color: $color-dark-sub;
                     }
                 }
                 
@@ -109,7 +111,7 @@
                     font-size: 0;
                     
                     &:before {
-                        font-size: 4rem; line-height: 1em; color: $color-main;
+                        font-size: 4rem; line-height: 1em;
                     }
                 }
             }
@@ -125,7 +127,7 @@
                 > * {
                     position: absolute; left: 10%;
                     width: 80%; height: 8%;
-                    background-color: $color-main;
+                    background-color: $color-dark;
                     @include border-radius(8rem);
                     @include transform-origin(center);
                     @include transition(.3s);
@@ -175,30 +177,39 @@
     display: inline-block;
     min-width: 12rem; padding: .5rem 1rem;
     border: .3rem solid transparent;
-    font-size: 2.2rem; font-weight: normal; text-align: center;
+    color: $color-dark; font-size: 2.2rem; font-weight: normal; text-align: center;
     @include border-radius(.3rem);
 
     &:hover,
     &:focus {
-        border-color: $color-main;
+        color: $color-dark-sub;
     }
 
     html[lang="de"] &[set-lang="de"],
     html[lang="en"] &[set-lang="en"] {
-        background-color: $color-main; cursor: auto;
-        color: $color-aspect; font-weight: bold;
+        cursor: auto;
         
         &:hover,
         &:focus {
             outline: none;
         }
     }
+    
+    #language-selection & {
+        
+        html[lang="de"] &[set-lang="de"],
+        html[lang="en"] &[set-lang="en"] {
+            background-color: $color-dark;
+            color: $color-light;
+        }
+    }
 
     #mobile-language-selection & {
+        color: $color-light;
 
         html[lang="de"] &[set-lang="de"],
         html[lang="en"] &[set-lang="en"] {
-            border-color: $color-aspect;
+            border-color: $color-light;
         }
     }
 }
@@ -218,8 +229,8 @@
     #skip-nav {
         display: inline-block; position: absolute; bottom: 0; left: 2rem;
         padding: .75em 1.25em;
-        background-color: $color-aspect; border: .3rem solid $color-main; white-space: nowrap;
-        color: $color-main; font-size: 1.8rem; line-height: 1.5em; text-decoration: none; font-weight: bold;
+        background-color: $color-light; border: .3rem solid $color-dark; white-space: nowrap;
+        color: $color-dark; font-size: 1.8rem; line-height: 1.5em; text-decoration: none; font-weight: bold;
         @include border-radius(.4rem);
 
         &:focus {
@@ -295,7 +306,7 @@
         .input {
             width: 100%; padding: 3rem (3rem + 5rem + 3rem) 3rem 3rem;
             background: none; border-bottom: .5rem solid rgba(255, 255, 255, 0.6);
-            font-size: 5rem; line-height: 1em; color: $color-aspect;
+            font-size: 5rem; line-height: 1em; color: $color-light;
             @include transition(.2s);
             
             // IE 10+
@@ -387,18 +398,23 @@
     @include user-select(none);
 
     .dropdown-indicator {
-        display: inline-block; vertical-align: baseline;
-        width: 0; height: 0; margin: 0 0 .1em .4em;
+        display: inline-block; vertical-align: middle;
+        width: 0; height: 0; margin: 0 0 0 .4em;
         border-left: .3em solid transparent;
         border-right: .3em solid transparent;
         border-top: .3em solid currentColor;
+        @include transition(.3s);
     }
     
     @include ON_DESKTOP {
         width: 100%;
-        background-color: $color-main;
+        background-color: $color-dark;
         text-align: center;
 
+        .dropdown-indicator {
+            margin-bottom: .4em;
+        }
+        
         > .main {
             display: inline-block; position: relative;
             max-width: $content-width + 150; width: 100%; padding: 0 $header-padding;
@@ -411,7 +427,7 @@
                 > a {
                     display: inline-block; position: relative; z-index: 1; vertical-align: bottom;
                     padding: 2rem 1.8rem;
-                    font-size: 0; line-height: 1em; color: $color-aspect; text-decoration: none;
+                    font-size: 0; line-height: 1em; color: $color-light; text-decoration: none;
 
                     > * {
                         font-size: 2.4rem; line-height: 1em;
@@ -419,8 +435,8 @@
                     
                     &:hover,
                     &:focus {
-                        background-color: $color-aspect; outline: none;
-                        color: $color-main;
+                        background-color: $color-light; outline: none;
+                        color: $color-dark;
                     }
 
                     &.home-btn {
@@ -437,8 +453,8 @@
             > li:hover,
             > li:focus-within {
                 > a {
-                    background-color: $color-aspect;
-                    color: $color-main;
+                    background-color: $color-light;
+                    color: $color-dark;
                 }
             }
         }
@@ -454,7 +470,7 @@
             max-width: 30rem; min-width: 25rem; width: 0; max-height: 40rem; height: 0; padding: 0;
             visibility: hidden; opacity: 0;
             overflow: hidden;
-            @include linear-gradient(135deg, $color-aspect 0%, $color-aspect-sub 100%);
+            @include linear-gradient(135deg, $color-light 0%, $color-light-sub 100%);
             @include transition(0s .2s, opacity 0s);
 
             &.depth-1 {
@@ -478,12 +494,12 @@
                 a {
                     display: inline-block;
                     width: 100%; padding: 1.2rem;
-                    font-size: 1.7rem; line-height: 1.3em; color: $color-main; text-decoration: none;
+                    font-size: 1.7rem; line-height: 1.3em; color: $color-dark; text-decoration: none;
 
                     &:hover,
                     &:focus {
-                        background-color: $color-main; outline: none;
-                        color: $color-aspect;
+                        background-color: $color-dark; outline: none;
+                        color: $color-light;
                     }
                 }
             }
@@ -526,8 +542,8 @@
             @include main-section-shadow;
             display: inline-block; position: relative; z-index: 2;
             max-width: 60rem; width: 80%; height: 100%; padding: 2rem;
-            background-color: $color-main; overflow-y: auto;
-            color: $color-aspect; text-align: left;
+            background-color: $color-dark; overflow-y: auto;
+            color: $color-light; text-align: left;
             @include transform(translate(-101%, 0));
             @include transition(.1s);
 
@@ -539,13 +555,11 @@
                 > a {
                     display: inline-block; position: relative; z-index: 1;
                     width: 100%; padding: 2rem 1.8rem;
-                    font-size: 2.5rem; line-height: 1em; font-weight: bold; color: $color-aspect; text-decoration: none;
+                    font-size: 2.5rem; line-height: 1em; font-weight: bold; color: $color-light; text-decoration: none;
 
                     &:hover,
                     &:focus {
                         outline: none;
-                        background-color: $color-aspect;
-                        color: $color-main;
                     }
 
                     &.home-btn {
@@ -569,44 +583,49 @@
                 outline: none;
             }
             
-            &.show + .dropdown {
-                display: block;
+            &.show {
+                
+                ~ .dropdown {
+                    margin: .8rem 0 3rem 0; padding: 1rem;
+                    @include transition(.3s, width 0s, height 0s, visiblity 0s, overflow 0s);
+                }
+            }
+            
+            &:not(.show) {
+                
+                ~ .dropdown {
+                    width: 0; height: 0; padding: 0 1rem;
+                    visibility: hidden; opacity: 0; overflow: hidden; 
+                    @include transition(.3s, width 0s .3s, height 0s .3s, visiblity 0s .3s, overflow 0s .3s);
+                }
+                
+                ~ a > .dropdown-indicator {
+                    @include transform(rotate(-90deg));
+                }
             }
         }
 
         .dropdown {
             @include main-section-shadow;
-            display: none;
+            display: block;
             position: relative; z-index: 4; // must be above mobile-dropdown-opener
-            width: 100%; margin: .8rem 0 3rem 0; padding: 1rem;
-            background-color: $color-aspect;
+            width: 100%;
+            background-color: $color-light;
             overflow: hidden;
             
             &.depth-1 {
-                @include linear-gradient(135deg, $color-aspect 0%, $color-aspect-sub 100%);
+                @include linear-gradient(135deg, $color-light 0%, $color-light-sub 100%);
                 
                 a {
-                    color: $color-main;
-
-                    &:hover,
-                    &:focus {
-                        background-color: $color-main;
-                        color: $color-aspect;
-                    }
+                    color: $color-dark;
                 }
             }
 
             &.depth-2 {
-                background-color: $color-main;
+                background-color: $color-dark;
                 
                 a {
-                    color: $color-aspect;
-
-                    &:hover,
-                    &:focus {
-                        background-color: $color-aspect;
-                        color: $color-main;
-                    }
+                    color: $color-light;
                 }
             }
 
