added RSS social button

--- a/css/src/fonts.scss
+++ b/css/src/fonts.scss
@@ -86,3 +86,4 @@
 .icon-iconmonstr-facebook-3:before { content: '\e802'; }
 .icon-iconmonstr-home-1:before { content: '\e803'; }
 .icon-iconmonstr-instagram-1:before { content: '\e804'; }
+.icon-iconmonstr-rss-feed-3:before { content: '\e805'; }
