--- a/css/src/header.scss
+++ b/css/src/header.scss
@@ -1,3 +1,18 @@
+@include keyframes(switch-animation-logo-top) {
+    0%, 10% {@include transform(translate(-50%,-150%));}
+    40%, 50%, 60% {@include transform(translate(-50%,-50%));}
+    90%, 100% {@include transform(translate(-50%,100%));}
+}
+
+@include keyframes(switch-animation-logo-bottom) {
+    0%, 10% {@include transform(translate(0,-150%));}
+    40%, 50%, 60% {@include transform(translate(0,-50%));}
+    90%, 100% {@include transform(translate(0,100%));}
+}
+                    
+$logo-ani-dur: 7s;
+
+
 #header {
     @include main-section-shadow;
     width: 100%; margin: 0 auto; padding-bottom: .5rem;
@@ -22,12 +37,26 @@
                 color: $color-dark; font-size: 5rem; line-height: 1em; text-decoration: none; font-weight: bold;
                 @include user-select(none);
 
-                span {
-                    display: inline-block;
-                    margin-left: .1em; padding: .1em .15em;
+                .alt-container {
+                    display: inline-block; position: relative; top: .1em; 
+                    vertical-align: bottom;
+                    width: 1.8em; height: 1.2em; margin-left: .1em;
+                    overflow: hidden;
                     background-color: $color-dark; border: .5rem solid transparent;
                     color: $color-light;
                     @include border-radius(.3rem);
+                    
+                    .alt1 {
+                        position: absolute; top: 50%; left: 50%;
+                        line-height: 1em;
+                        @include animation(switch-animation-logo-top $logo-ani-dur 0s infinite);
+                    }
+                    
+                    .alt2 {
+                        position: absolute; top: 50%; left: 50%;
+                        line-height: 1em;
+                        @include animation(switch-animation-logo-top $logo-ani-dur (-1 * $logo-ani-dur / 2) infinite);
+                    }
                 }
 
                 @include ON_DESKTOP {
@@ -48,6 +77,26 @@
                 display: inline-block;
                 padding: .5rem;
                 font-size: 1.8rem; line-height: 1em; color: $color-dark;
+
+                .alt-container {
+                    display: inline-block; position: relative;
+                    vertical-align: bottom;
+                    width: 5em; height: 1em;
+                    overflow: hidden;
+                    
+                    .alt1 {
+                        position: absolute; top: 50%; left: 0;
+                        line-height: 1em;
+                        @include animation(switch-animation-logo-bottom $logo-ani-dur 0s infinite);
+                    }
+                    
+                    .alt2 {
+                        position: absolute; top: 50%; left: 0;
+                        line-height: 1em;
+                        @include animation(switch-animation-logo-bottom $logo-ani-dur (-1 * $logo-ani-dur / 2) infinite);
+                    }
+                }
+
             }
         }
 
