--- a/css/src/header.scss
+++ b/css/src/header.scss
@@ -1,18 +1,3 @@
-@include keyframes(switch-animation-logo-top) {
-    0%, 20% {@include transform(translate(-50%,-150%));}
-    30%, 50%, 70% {@include transform(translate(-50%,-50%));}
-    80%, 100% {@include transform(translate(-50%,100%));}
-}
-
-@include keyframes(switch-animation-logo-bottom) {
-    0%, 20% {@include transform(translate(0,-150%));}
-    30%, 50%, 70% {@include transform(translate(0,-50%));}
-    80%, 100% {@include transform(translate(0,100%));}
-}
-                    
-$logo-ani-dur: 12s;
-
-
 #header {
     @include main-section-shadow;
     width: 100%; margin: 0 auto; padding-bottom: .5rem;
@@ -30,73 +15,18 @@ $logo-ani-dur: 12s;
     
         .logo {
             display: inline-block;
+            padding: .2em .35em;
+            border: .5rem solid $color-dark;
+            color: $color-dark; font-size: 3.5rem; line-height: 1em; text-decoration: none; font-weight: bold;
+            @include border-radius(.3rem);
 
-            .link {
-                display: inline-block;
-                margin-right: .3em; padding: .5rem;
-                color: $color-dark; font-size: 5rem; line-height: 1em; text-decoration: none; font-weight: bold;
-                @include user-select(none);
+            @include ON_DESKTOP {
 
-                .alt-container {
-                    display: inline-block; position: relative; top: .1em; 
-                    vertical-align: bottom;
-                    width: 1.8em; height: 1.2em; margin-left: .1em;
-                    overflow: hidden;
-                    background-color: $color-dark; border: .5rem solid transparent;
-                    color: $color-light;
-                    @include border-radius(.3rem);
-                    
-                    .alt1 {
-                        position: absolute; top: 50%; left: 50%;
-                        line-height: 1em;
-                        @include animation(switch-animation-logo-top $logo-ani-dur (-1 * $logo-ani-dur / 2) infinite);
-                    }
-                    
-                    .alt2 {
-                        position: absolute; top: 50%; left: 50%;
-                        line-height: 1em;
-                        @include animation(switch-animation-logo-top $logo-ani-dur 0s infinite);
-                    }
+                &:hover,
+                &:focus {
+                    background-color: $color-dark; border-color: transparent; outline-color: $color-dark;
+                    color: $color-light; text-decoration: none;
                 }
-
-                @include ON_DESKTOP {
-                    
-                    &:hover,
-                    &:focus {
-                        text-decoration: none;
-
-                        span {
-                            background-color: transparent; border-color: $color-dark;
-                            color: $color-dark;
-                        }
-                    }
-                }
-            }
-
-            .text {
-                display: inline-block;
-                padding: .5rem;
-                font-size: 1.8rem; line-height: 1em; color: $color-dark;
-
-                .alt-container {
-                    display: inline-block; position: relative;
-                    vertical-align: bottom;
-                    width: 5em; height: 1em;
-                    overflow: hidden;
-                    
-                    .alt1 {
-                        position: absolute; top: 50%; left: 0;
-                        line-height: 1em;
-                        @include animation(switch-animation-logo-bottom $logo-ani-dur (-1 * $logo-ani-dur / 2) infinite);
-                    }
-                    
-                    .alt2 {
-                        position: absolute; top: 50%; left: 0;
-                        line-height: 1em;
-                        @include animation(switch-animation-logo-bottom $logo-ani-dur 0s infinite);
-                    }
-                }
-
             }
         }
 
@@ -104,7 +34,7 @@ $logo-ani-dur: 12s;
         
         .right-menu {
             float: right;
-            margin: 1rem 0 0 4rem;
+            margin: .5rem 0 0 4rem;
             
             @include ON_MOBILE {
                 position: absolute; top: 50%; right: $header-padding;
@@ -140,7 +70,7 @@ $logo-ani-dur: 12s;
             }
 
             #open-search-btn {
-                margin-left: 5rem; padding: 1rem;
+                margin-left: 5rem; padding: .4rem;
                 color: $color-dark; font-size: 0; line-height: 1em;
                 @include border-radius(.3rem);
                 
@@ -160,7 +90,7 @@ $logo-ani-dur: 12s;
                     font-size: 0;
                     
                     &:before {
-                        font-size: 4rem; line-height: 1em;
+                        font-size: 3.6rem; line-height: 1em;
                     }
                 }
             }
