generalized footer lists

--- a/css/src/footer.scss
+++ b/css/src/footer.scss
@@ -30,7 +30,7 @@
                 margin: $margin-vertical 0;
                 font-size: 4rem; line-height: 1.6em; font-weight: bold;
 
-                .hashtag {
+                .m18 {
                     margin: 0 .13em 0.8em; padding: 0 .2em;
                     border: .12em solid $color-dark;
                     color: $color-dark; text-decoration: none;
