--- a/css/src/header.scss
+++ b/css/src/header.scss
@@ -19,10 +19,26 @@
     
         .logo {
             display: inline-block;
-            padding: .2em .35em;
-            border: .5rem solid $color-dark;
-            color: $color-dark; font-size: 3.5rem; line-height: 1em; text-decoration: none; font-weight: bold;
+            padding: .55rem .8rem;
+            border: .4rem solid $color-dark;
+            color: $color-dark; text-decoration: none; font-weight: bold;
             @include border-radius(.3rem);
+            @include user-select(none);
+            
+            > * {
+                display: inline-block; vertical-align: bottom;
+            }
+            
+            .icon {
+                margin-right: .5rem;
+                &:before {
+                    font-size: 4rem; line-height: 1em;
+                }
+            }
+            
+            .text {
+                font-size: 2.8rem; line-height: .8em;
+            }
 
             @include ON_DESKTOP {
 
@@ -421,15 +437,6 @@
                         background-color: $color-light; outline: none;
                         color: $color-dark;
                     }
-
-                    &.home-btn {
-                        > * {
-                            font-size: 0;
-                            &:before {
-                                font-size: 2.4rem;
-                            }
-                        }
-                    }
                 }
             }
 
@@ -543,15 +550,6 @@
                     &:hover,
                     &:focus {
                         outline: none;
-                    }
-
-                    &.home-btn {
-
-                        svg {
-                            display: inline-block; vertical-align: baseline;
-                            width: 1em; height: 1em;
-                            fill: currentColor;
-                        }
                     }
                 }
             }
