--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -29,12 +29,11 @@ $font-main: 'Noto Sans', 'Roboto', 'Arial', sans-serif;
 $color-dark: #150d00;
 $color-dark-sub: #793d02;
 $color-light: #fddd38;
-$color-light-sub: #ffb426;
+$color-light-sub: #ffc730;
 
 // text colors
 $color-text: #272727;
-$color-link-1: #ffb300;
-$color-link-2: #ff7800;
+$color-link: #ff8900;
 $color-link-shadow: rgba(255, 118, 0, 0.15);
 $color-link-shadow-hover: rgba(255, 98, 0, 0.55);
 
