--- a/css/src/footer.scss
+++ b/css/src/footer.scss
@@ -113,8 +113,12 @@
 
             .list {
                 display: inline-block; vertical-align: top;
-                margin: 4rem 7rem 4rem 0; padding-left: 2rem;
+                margin: 4rem 7rem 4rem 0; padding: 0;
 
+                li {
+                    list-style: none;
+                }
+                
                 .headline {
                     list-style: none;
                     margin-bottom: .5em;
@@ -122,8 +126,8 @@
                 }
 
                 .link {
-                    padding: .1em 0;
-                    font-size: 2.3rem; line-height: 1.5em;
+                    margin: .15em 0; padding: .2em;
+                    font-size: 1.9rem; line-height: 1.4em;
 
                     a {
                         color: $color-light; font-weight: normal; text-decoration: none;
