--- a/css/src/footer.scss
+++ b/css/src/footer.scss
@@ -116,6 +116,7 @@
                 margin: 4rem 7rem 4rem 0; padding: 0;
 
                 li {
+                    padding: 0;
                     list-style: none;
                 }
                 
@@ -126,10 +127,11 @@
                 }
 
                 .link {
-                    margin: .15em 0; padding: .2em;
+                    margin: .6em 0;
                     font-size: 1.9rem; line-height: 1.4em;
 
                     a {
+                        padding: .05em .25em;
                         color: $color-light; font-weight: normal; text-decoration: none;
 
                         &:hover,
