--- a/css/src/header.scss
+++ b/css/src/header.scss
@@ -75,7 +75,7 @@
 
                 > li {
                     display: inline-block;
-                    margin: 0 .7rem .3rem .7rem;
+                    margin: 0 .7rem;
                     font-size: 1.8rem;
 
                     &:first-child {
